tests/sumo/tls/errors/sub_invalid/tls_state_switch.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed Aug 29 16:46:38 2018 by Eclipse SUMO Version 6fdf72c
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="200"/>
    </time>

    <processing>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tlsStates xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tlsstates_file.xsd">
</tlsStates>
